force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/Natterbox_Call_Reporting_Object__c.object-meta.xml
<CustomObject>
    <description>This is the repository for all Natterbox call data. At the end of every call, Natterbox will populate this object with over 60 data points for the call. All Natterbox reports and dashboards are generated with data from this object.</description>
    <label>Natterbox Call Reporting Object</label>
    <nameField>
        <label>Customer Service Calls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Natterbox Call Reporting Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>