force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/fields/abhour__c.field-meta.xml
<CustomField>
    <fullName>abhour__c</fullName>
    <formula>TEXT(CASE( VALUE(MID(TEXT(Call_Start_Date_Time__c),12,2)) , 
0, 12,
1, 13,
2, 14,
3, 15,
4, 16,
5, 17,
6, 18,
7, 19,
8, 20,
9,  21,
10,  22,
11,  23,
12,  00,
13,  01,
14,  02,
15,  03,
16,  04,
17,  05,
18,  06,
19,  07,
20,  08,
21,  09,
22,  10,
23,  11,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour</label>
    <type>Text</type>
</CustomField>