force-app/main/default/objects/Natterbox_Call_Reporting_Object__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CallerNumber__c</columns>
    <columns>CallDurationSeconds__c</columns>
    <columns>Call_Start_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>